--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    user.example:
-#        class: UserBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    UserBundle\Controller\SecurityController:
+        bind:
+            $authUtils: '@security.authentication_utils'
+        tags: ['controller.service_arguments']
