added twig extensions, filters, functions. modified login functionality

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,7 +29,11 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
-    # add more services, or override services that need manual wiring
-    # AppBundle\Service\ExampleService:
-    #     arguments:
-    #         $someArgument: 'some_value'
+    PostBundle\Twig\PostExtension:
+        $locales: '%app_locales%'
+        $parser: '@markdown'
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
