--- a/src/PostBundle/Resources/config/services.yml
+++ b/src/PostBundle/Resources/config/services.yml
@@ -13,3 +13,6 @@ services:
 #   Utils
     slugger:
         class: 'PostBundle\Utils\Slugger'
+
+    markdown:
+        class: 'PostBundle\Utils\Markdown'
