--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
+        "erusev/parsedown": "^1.7",
+        "exercise/htmlpurifier-bundle": "^1.0",
         "fzaninotto/faker": "^1.7",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
@@ -33,7 +35,9 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/extensions": "^1.2",
+        "twig/twig": "^1.0||^2.0",
+        "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
